rocon_app_utilities/tests/test_rapps/rapp/valid/implementation_child.rapp
compatibility: rocon:/*
launch: rocon_apps/talker.launch
parent_name: rocon_apps/talker.rapp
