rocon_app_utilities/tests/test_rapps/rapp/invalid_classification/conflict.rapp
display: Talker
description: Default ros style talker tutorial
public_interface: foo.interface
public_parameters: foo.parameters
parent_name: rocon_apps/talker.rapp
compatibility: rocon:/*
launch: foo.launch
